[gd_scene load_steps=9 format=3 uid="uid://dsonacup27li4"]

[ext_resource type="Script" path="res://scripts/satchel.gd" id="1_i4atl"]
[ext_resource type="Texture2D" path="res://assets/sprites/satchel.png" id="2_5efio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4n67e"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_yvrvj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vgrum"]
resource_name = "explosion"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_lsym1"]
resource_name = "idle"
length = 0.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ag4ku"]
_data = {
"RESET": SubResource("Animation_yvrvj"),
"explosion": SubResource("Animation_vgrum"),
"idle": SubResource("Animation_lsym1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_kl3nd"]
radius = 18.0

[node name="Satchel" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_i4atl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5efio")
hframes = 4
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4n67e")

[node name="Self_Detonate_Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ag4ku")
}

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Explosion_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Explosion_Shape" type="CollisionShape2D" parent="Explosion_Area"]
shape = SubResource("CircleShape2D_kl3nd")

[connection signal="timeout" from="Self_Detonate_Timer" to="." method="_on_self_detonate_timer_timeout"]
[connection signal="body_entered" from="Explosion_Area" to="." method="_on_explosion_area_body_entered"]
[connection signal="body_exited" from="Explosion_Area" to="." method="_on_explosion_area_body_exited"]
